tests/NormalTests/paczka1/fuzzy1/55975879.err
Error in line 6: S341 S793 68,9
Error in line 16: JdY S793 26,3
Error in line 11: Wm5yq S6 158,8
Error in line 15: Va3A3G S6 19,1
Error in line 22: Wm5yq S341 49,6
Error in line 27: Va3A3G S341 32,4
